test/mpi/errors/f08/Makefile.am
##
## Copyright (C) by Argonne National Laboratory
##     See COPYRIGHT in top-level directory
##

include $(top_srcdir)/Makefile_f08.mtest

EXTRA_DIST = testlist

SUBDIRS = @iodir@
DIST_SUBDIRS = io
